--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>PCH</title>
-    <link rel="stylesheet" href="./style.css" type="text/css" media="all">
+    <link rel="stylesheet" href="./assets/styles/index.css" type="text/css" media="all">
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <a href="/">
+      <div class="logo">
+        <module href="/assets/svg/logo.svg"></module>
+      </div>
+    </a>
     <script src="./index.js"></script>
   </body>
 </html>
