:lipstick: Add some UI & labels

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <module href="/assets/svg/logo.svg"></module>
       </div>
     </a>
+    <h1>Today</h1>
+    <button class="next-button">Explore your future with PCH</button>
     <script src="./index.js"></script>
   </body>
 </html>
