:sparkles: Add UI and China scene

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     </a>
     <h1>Today</h1>
     <button class="next-button">Explore your future with PCH</button>
+    <div class="path-buttons">
+      <button class="path-button">Direct-to-consumer</button>
+      <button class="path-button">Business-to-business</button>
+    </div>
+    <button class="nav-button left-nav-button">
+      <span>Europe</span>
+      <span class="nav-button-subtext">B2B, B2C<br/>hubs</span>
+    </button>
+    <button class="nav-button right-nav-button">
+      <span>USA</span>
+      <span class="nav-button-subtext">B2B, B2C<br/>hubs</span>
+    </button>
     <script src="./index.js"></script>
   </body>
 </html>
