:sparkles: Add intro transition

--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
         <module href="/assets/svg/logo.svg"></module>
       </div>
     </a>
-    <h1>Today</h1>
-    <button class="next-button">Explore your future with PCH</button>
+    <h1 class="heading intro-heading">Single solution to end supply chain</h1>
+    <button class="standard-button next-button hidden">Explore your future with PCH</button>
+    <button class="standard-button launch-button hidden">start experience</button>
     <div class="path-buttons">
       <button class="path-button">Direct-to-consumer</button>
       <button class="path-button">Business-to-business</button>
     </div>
-    <button class="nav-button left-nav-button">
+    <button class="nav-button left-nav-button hidden">
       <span>Europe</span>
       <span class="nav-button-subtext">B2B, B2C<br/>hubs</span>
     </button>
-    <button class="nav-button right-nav-button">
+    <button class="nav-button right-nav-button hidden">
       <span>USA</span>
       <span class="nav-button-subtext">B2B, B2C<br/>hubs</span>
     </button>
