:sparkles: Add logo uploading

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       </div>
     </a>
     <h1 class="heading intro-heading">Single solution to end supply chain</h1>
+    <label class="upload-logo" for="logo-upload">
+      <span class="upload-logo-plus"></span><span>Upload logo</span>
+    </label>
+    <input id="logo-upload" type="file" class="upload-logo-input" accept="image/svg+xml" />
+    <div class="client-logo"></div>
     <button class="standard-button next-button hidden">Explore your future with PCH</button>
     <button class="standard-button launch-button hidden">start experience</button>
     <div class="path-buttons">
