:construction: Add draft transition to next scene

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <button class="standard-button next-button hidden">Explore your future with PCH</button>
     <button class="standard-button launch-button hidden">start experience</button>
     <div class="path-buttons">
-      <button class="path-button">Direct-to-consumer</button>
-      <button class="path-button">Business-to-business</button>
+      <button class="path-button d2c-button">Direct-to-consumer</button>
+      <button class="path-button b2b-button">Business-to-business</button>
     </div>
     <button class="nav-button left-nav-button hidden">
       <span>Europe</span>
