:lipstick: Better transitions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./assets/styles/index.css" type="text/css" media="all">
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <div class="canvas-box">
+      <canvas id="canvas"></canvas>
+      <div class="canvas-overlay canvas-overlay-black"></div>
+    </div>
     <a href="/">
       <div class="logo">
         <module href="/assets/svg/logo.svg"></module>
