:lipstick: Add nav

--- a/index.html
+++ b/index.html
@@ -36,6 +36,25 @@
       <span>USA</span>
       <span class="nav-button-subtext">B2B, B2C<br/>hubs</span>
     </button>
+    <nav>
+      <ul>
+        <li>
+          <button class="nav-button-order active">Order&nbsp;</button>
+        </li>
+        <li>
+          <button class="nav-button-manufacturers"><span >→</span>&nbsp;Manufacturers&nbsp;</button>
+        </li>
+        <li>
+          <button class="nav-button-postponement"><span >→</span>&nbsp;Postponement&nbsp;</button>
+        </li>
+        <li>
+          <button class="nav-button-fulfillment"><span >→</span>&nbsp;Fulfillment&nbsp;</button>
+        </li>
+        <li>
+          <button class="nav-btn-delivery"><span >→</span>&nbsp;Delivery</button>
+        </li>
+      </ul>
+    </nav>
     <script src="./index.js"></script>
   </body>
 </html>
