:sparkles: Add 'place order' button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="client-logo"></div>
     <button class="standard-button next-button hidden">Explore your future with PCH</button>
     <button class="standard-button launch-button hidden">start experience</button>
+    <button class="standard-button place-order-button hidden">Place order</button>
     <div class="path-buttons">
       <button class="path-button d2c-button">Direct-to-consumer</button>
       <button class="path-button b2b-button">Business-to-business</button>
