--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div class="client-logo"></div>
     <button class="standard-button next-button hidden">Explore your future with PCH</button>
     <button class="standard-button launch-button hidden">start experience</button>
-    <button class="standard-button place-order-button hidden">Place order</button>
+    <button class="standard-button action-button place-order-button hidden">Place order</button>
+    <button class="standard-button action-button manufacture-button hidden">Manufacture</button>
     <div class="path-buttons">
       <button class="path-button d2c-button">Direct-to-consumer</button>
       <button class="path-button b2b-button">Business-to-business</button>
@@ -43,7 +44,7 @@
           <button class="nav-button-order active">Order&nbsp;</button>
         </li>
         <li>
-          <button class="nav-button-manufacturers"><span >→</span>&nbsp;Manufacturers&nbsp;</button>
+          <button class="nav-button-manufacturing"><span >→</span>&nbsp;Manufacturers&nbsp;</button>
         </li>
         <li>
           <button class="nav-button-postponement"><span >→</span>&nbsp;Postponement&nbsp;</button>
