:sparkles: Add postponement & fulfillment scenes

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <button class="standard-button launch-button hidden">start experience</button>
     <button class="standard-button action-button place-order-button hidden">Place order</button>
     <button class="standard-button action-button manufacture-button hidden">Manufacture</button>
+    <button class="standard-button action-button postponement-button hidden">Pack the product</button>
+    <button class="standard-button action-button fulfillment-button hidden">Stack boxes on a pallet</button>
     <div class="path-buttons">
       <button class="path-button d2c-button">Direct-to-consumer</button>
       <button class="path-button b2b-button">Business-to-business</button>
