:construction: Draft delivery scenes

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <button class="standard-button action-button manufacture-button hidden">Manufacture</button>
     <button class="standard-button action-button postponement-button hidden">Pack the product</button>
     <button class="standard-button action-button fulfillment-button hidden">Stack boxes on a pallet</button>
+    <button class="standard-button action-button delivery-button hidden">Deliver</button>
     <div class="path-buttons">
       <button class="path-button d2c-button">Direct-to-consumer</button>
       <button class="path-button b2b-button">Business-to-business</button>
@@ -55,7 +56,7 @@
           <button class="nav-button-fulfillment"><span >→</span>&nbsp;Fulfillment&nbsp;</button>
         </li>
         <li>
-          <button class="nav-btn-delivery"><span >→</span>&nbsp;Delivery</button>
+          <button class="nav-button-delivery"><span >→</span>&nbsp;Delivery</button>
         </li>
       </ul>
     </nav>
