:construction: Draft d2c order scene

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <button class="standard-button next-button hidden">Explore your future with PCH</button>
     <button class="standard-button launch-button hidden">start experience</button>
     <button class="standard-button action-button place-order-button hidden">Place order</button>
+    <button class="standard-button action-button place-order-d2c-button hidden">Place order</button>
     <button class="standard-button action-button manufacture-button hidden">Manufacture</button>
     <button class="standard-button action-button postponement-button hidden">Pack the product</button>
     <button class="standard-button action-button fulfillment-button hidden">Stack boxes on a pallet</button>
