:lipstick: Add progress bar and fulfillment scaling

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <button class="standard-button action-button postponement-button hidden">Pack the product</button>
     <button class="standard-button action-button fulfillment-button hidden">Stack boxes on a pallet</button>
     <button class="standard-button action-button delivery-button hidden">Deliver</button>
+    <div class="progress-bar"></div>
     <div class="path-buttons">
       <button class="path-button d2c-button">Direct-to-consumer</button>
       <button class="path-button b2b-button">Business-to-business</button>
