:mute: Remove controls

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <button class="standard-button action-button place-order-d2c-button hidden">Place order</button>
     <button class="standard-button action-button manufacture-button hidden">Manufacture</button>
     <button class="standard-button action-button postponement-button hidden">Pack the product</button>
-    <button class="standard-button action-button fulfillment-button hidden">Stack boxes on a pallet</button>
+    <button class="standard-button action-button fulfillment-button hidden">Fulfill order</button>
     <button class="standard-button action-button delivery-button hidden">Deliver</button>
     <div class="progress-bar"></div>
     <div class="path-buttons">
