:sparkles: Allow uploading client logo in different formats

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <label class="upload-logo" for="logo-upload">
       <span class="upload-logo-plus"></span><span>Upload logo</span>
     </label>
-    <input id="logo-upload" type="file" class="upload-logo-input" accept="image/svg+xml" />
+    <input id="logo-upload" type="file" class="upload-logo-input" accept="image/*" />
     <div class="client-logo"></div>
     <button class="standard-button next-button hidden">Explore your future with PCH</button>
     <button class="standard-button launch-button hidden">start experience</button>
