--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <span class="upload-logo-plus"></span><span>Upload logo</span>
     </label>
     <input id="logo-upload" type="file" class="upload-logo-input" accept="image/*" />
-    <div class="client-logo"></div>
+    <div class="client-logo hidden"></div>
     <button class="standard-button next-button hidden">Explore your future with PCH</button>
     <button class="standard-button launch-button hidden">start experience</button>
     <button class="standard-button restart-button hidden">start again</button>
