:sparkles: Add pyramids and shenzhen

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </div>
     </a>
     <h1 class="heading intro-heading">Single solution to end supply chain</h1>
+    <div class="long-flights hidden">* flights up to 16 hours</div>
     <button class="globe-button hidden"></button>
     <label class="upload-logo" for="logo-upload">
       <span class="upload-logo-plus"></span><span>Upload logo</span>
