:sparkles: Add <- Today button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </label>
     <input id="logo-upload" type="file" class="upload-logo-input" accept="image/*" />
     <div class="client-logo hidden"></div>
-    <button class="standard-button next-button hidden">Explore your future with PCH</button>
+    <button class="standard-button tomorrow-button hidden">Explore your future with PCH</button>
     <button class="standard-button launch-button hidden">start experience</button>
     <button class="standard-button restart-button hidden">start again</button>
     <button class="standard-button action-button place-order-button hidden">Place order</button>
@@ -33,6 +33,7 @@
     <button class="standard-button action-button postponement-button hidden">Pack the product</button>
     <button class="standard-button action-button fulfillment-button hidden">Fulfill order</button>
     <button class="standard-button action-button delivery-button hidden">Deliver</button>
+    <button class="today-button hidden">← Today</button>
     <div class="progress-bar"></div>
     <div class="path-buttons hidden">
       <button class="path-button d2c-button">Direct-to-consumer</button>
