:sparkles: Add navigation buttons

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
     <nav class="hidden">
       <ul>
         <li>
-          <button class="nav-menu-button nav-button-order active">Order&nbsp;</button>
+          <button data-step="ORDER_B2B_STEP" class="nav-menu-button nav-button-order active">Order&nbsp;</button>
         </li>
         <li>
-          <button class="nav-menu-button nav-button-manufacturing"><span >→</span>&nbsp;Manufacturers&nbsp;</button>
+          <button data-step="MANUFACTURING_STEP" class="nav-menu-button nav-button-manufacturing"><span >→</span>&nbsp;Manufacturers&nbsp;</button>
         </li>
         <li>
-          <button class="nav-menu-button nav-button-postponement"><span >→</span>&nbsp;Postponement&nbsp;</button>
+          <button data-step="POSTPONEMENT_STEP" class="nav-menu-button nav-button-postponement"><span >→</span>&nbsp;Postponement&nbsp;</button>
         </li>
         <li>
-          <button class="nav-menu-button nav-button-fulfillment"><span >→</span>&nbsp;Fulfillment&nbsp;</button>
+          <button data-step="FULFILLMENT_STEP" class="nav-menu-button nav-button-fulfillment"><span >→</span>&nbsp;Fulfillment&nbsp;</button>
         </li>
         <li>
-          <button class="nav-menu-button nav-button-delivery"><span >→</span>&nbsp;Delivery</button>
+          <button data-step="DELIVERY_B2B_STEP" class="nav-menu-button nav-button-delivery"><span >→</span>&nbsp;Delivery</button>
         </li>
       </ul>
     </nav>
