:lipstick: Add gradients, adjust timings

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
         </li>
       </ul>
     </nav>
+    <div class="grad-top hidden"></div>
+    <div class="grad-bottom hidden"></div>
     <div class="restart hidden">
       <div class="restart-images">
         <div class="restart-img restart-img-1"></div>
