:sparkles: Add current step label

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </label>
     <input id="logo-upload" type="file" class="upload-logo-input" accept="image/*" />
     <div class="client-logo hidden"></div>
+    <div class="current-step hidden"></div>
     <button class="standard-button tomorrow-button hidden">Explore your future with PCH</button>
     <button class="standard-button launch-button hidden">start experience</button>
     <button class="standard-button restart-button hidden">start again</button>
