:sparkles: Add particle breadcrumbs

--- a/index.html
+++ b/index.html
@@ -50,20 +50,44 @@
     </button>
     <nav class="hidden">
       <ul>
+        <div class="line-box">
+        <span class="active-line">
+          <div class="nav-particle nav-particle-1"></div>
+          <div class="nav-particle nav-particle-2"></div>
+          <div class="nav-particle nav-particle-3"></div>
+          <div class="nav-particle nav-particle-4"></div>
+        </span>
+        <span class="inactive-line"></span>
+        <span class="star star-1"></span>
+        <span class="star star-2"></span>
+        <span class="star star-3"></span>
+        <span class="star star-4"></span>
+        <span class="star star-5"></span>
+        </div>
         <li>
-          <button data-step="ORDER_B2B_STEP" class="nav-menu-button nav-button-order active">Order&nbsp;</button>
+          <button data-step="ORDER_B2B_STEP" class="nav-menu-button nav-button-order active">
+            <span class="nav-menu-button-text">Order</span>&nbsp;
+          </button>
         </li>
         <li>
-          <button data-step="MANUFACTURING_STEP" class="nav-menu-button nav-button-manufacturing"><span >→</span>&nbsp;Manufacturers&nbsp;</button>
+          <button data-step="MANUFACTURING_STEP" class="nav-menu-button nav-button-manufacturing">
+            <span >→</span>&nbsp;<span class="nav-menu-button-text">Manufacturers</span>&nbsp;
+          </button>
         </li>
         <li>
-          <button data-step="POSTPONEMENT_STEP" class="nav-menu-button nav-button-postponement"><span >→</span>&nbsp;Postponement&nbsp;</button>
+          <button data-step="POSTPONEMENT_STEP" class="nav-menu-button nav-button-postponement">
+            <span >→</span>&nbsp;<span class="nav-menu-button-text">Postponement</span>&nbsp;
+          </button>
         </li>
         <li>
-          <button data-step="FULFILLMENT_STEP" class="nav-menu-button nav-button-fulfillment"><span >→</span>&nbsp;Fulfillment&nbsp;</button>
+          <button data-step="FULFILLMENT_STEP" class="nav-menu-button nav-button-fulfillment">
+            <span >→</span>&nbsp;<span class="nav-menu-button-text">Fulfillment</span>&nbsp;
+          </button>
         </li>
         <li>
-          <button data-step="DELIVERY_B2B_STEP" class="nav-menu-button nav-button-delivery"><span >→</span>&nbsp;Delivery</button>
+          <button data-step="DELIVERY_B2B_STEP" class="nav-menu-button nav-button-delivery">
+            <span >→</span>&nbsp;<span class="nav-menu-button-text">Delivery</span>
+          </button>
         </li>
       </ul>
     </nav>
