:lipstick: Update breadcrumbs

--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
         </li>
         <li>
           <button data-step="MANUFACTURING_STEP" class="nav-menu-button nav-button-manufacturing">
-            <span >→</span>&nbsp;<span class="nav-menu-button-text">Manufacturers</span>&nbsp;
+            &nbsp;&nbsp;&nbsp;<span class="nav-menu-button-text">Manufacturers</span>&nbsp;
           </button>
         </li>
         <li>
           <button data-step="POSTPONEMENT_STEP" class="nav-menu-button nav-button-postponement">
-            <span >→</span>&nbsp;<span class="nav-menu-button-text">Postponement</span>&nbsp;
+            &nbsp;&nbsp;&nbsp;<span class="nav-menu-button-text">Postponement</span>&nbsp;
           </button>
         </li>
         <li>
           <button data-step="FULFILLMENT_STEP" class="nav-menu-button nav-button-fulfillment">
-            <span >→</span>&nbsp;<span class="nav-menu-button-text">Fulfillment</span>&nbsp;
+            &nbsp;&nbsp;&nbsp;<span class="nav-menu-button-text">Fulfillment</span>&nbsp;
           </button>
         </li>
         <li>
           <button data-step="DELIVERY_B2B_STEP" class="nav-menu-button nav-button-delivery">
-            <span >→</span>&nbsp;<span class="nav-menu-button-text">Delivery</span>
+            &nbsp;&nbsp;&nbsp;<span class="nav-menu-button-text">Delivery</span>
           </button>
         </li>
       </ul>
